[tool.poetry]
name = "pump-fun-ws"
version = "0.1.0"
description = ""
authors = ["sle3pyc4t <fdujwc.cn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
construct = "2.10.68"
websockets = ">=9.0,<=12.0"
solders = "0.21.0"
solana = "^0.34.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
